// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> rendering should render correctly with social links 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="social-links row"
        >
          <p>
            <a
              className="social-link button full"
              href="https://radius.openwisp.io/login/google"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="inner"
              >
                <img
                  alt="Google"
                  className="icon"
                  src="/assets/default/google.png"
                />
                <span
                  className="text"
                >
                  Google
                </span>
              </span>
            </a>
          </p>
          <p>
            <a
              className="social-link button full"
              href="https://radius.openwisp.io/login/facebook"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="inner"
              >
                <img
                  alt="Facebook"
                  className="icon"
                  src="/assets/default/facebook.png"
                />
                <span
                  className="text"
                >
                  Facebook
                </span>
              </span>
            </a>
          </p>
        </div>
        <div
          className="fieldset"
        >
          <div
            className="row email"
          >
            <label
              htmlFor="email"
            >
              email
            </label>
            <input
              className="input "
              id="email"
              name="email"
              onChange={[Function]}
              pattern=".+@.+\\\\..+"
              placeholder="email address"
              required={true}
              title={null}
              type="email"
              value=""
            />
          </div>
          <div
            className="row password"
          >
            <label
              htmlFor="password"
            >
              password
            </label>
            <input
              className="input "
              id="password"
              name="password"
              onChange={[Function]}
              pattern=".{6,}"
              placeholder="password"
              required={true}
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className="row add-info"
        >
          By logging in, you accept the 
          <Link
            className="link additional login"
            to="/default/login/terms-and-conditions"
          >
            terms and conditions
          </Link>
           and the 
          <Link
            className="link additional login"
            to="/default/login/privacy-policy"
          >
            privacy policy
          </Link>
           of this WiFi service. 
        </div>
        <div
          className="row login"
        >
          <input
            className="button full"
            type="submit"
            value="Login"
          />
        </div>
        <div
          className="row register"
        >
          <p>
            Not registered yet?
          </p>
          <Link
            className="button full"
            to="/default/registration"
          >
            Sign up
          </Link>
        </div>
        <div
          className="row links"
        >
          <Link
            className="link"
            to="/default/password/reset"
          >
            Forgot your password?
          </Link>
        </div>
      </form>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <Route
    path="default/login/:name"
    render={[Function]}
  />
</React.Fragment>
`;

exports[`<Login /> rendering should render correctly without social links 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="social-links row"
        >
          <p>
            <a
              className="social-link button full"
              href="#facebook"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="inner"
              >
                <img
                  alt="Login with Facebook"
                  className="icon"
                  src="/assets/default/facebook.svg"
                />
                <span
                  className="text"
                >
                  Login with Facebook
                </span>
              </span>
            </a>
          </p>
          <p>
            <a
              className="social-link button full"
              href="#google"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="inner"
              >
                <img
                  alt="Login with google"
                  className="icon"
                  src="/assets/default/google.svg"
                />
                <span
                  className="text"
                >
                  Login with google
                </span>
              </span>
            </a>
          </p>
          <p>
            <a
              className="social-link button full"
              href="#twitter"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                className="inner"
              >
                <img
                  alt="Login with Twitter"
                  className="icon"
                  src="/assets/default/twitter.svg"
                />
                <span
                  className="text"
                >
                  Login with Twitter
                </span>
              </span>
            </a>
          </p>
        </div>
        <div
          className="fieldset"
        >
          <div
            className="row email"
          >
            <label
              htmlFor="email"
            >
              email
            </label>
            <input
              className="input "
              id="email"
              name="email"
              onChange={[Function]}
              pattern=".+@.+\\\\..+"
              placeholder="email address"
              required={true}
              title={null}
              type="email"
              value=""
            />
          </div>
          <div
            className="row password"
          >
            <label
              htmlFor="password"
            >
              password
            </label>
            <input
              className="input "
              id="password"
              name="password"
              onChange={[Function]}
              pattern=".{6,}"
              placeholder="password"
              required={true}
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className="row add-info"
        >
          By logging in, you accept the 
          <Link
            className="link additional login"
            to="/default/login/terms-and-conditions"
          >
            terms and conditions
          </Link>
           and the 
          <Link
            className="link additional login"
            to="/default/login/privacy-policy"
          >
            privacy policy
          </Link>
           of this WiFi service. 
        </div>
        <div
          className="row login"
        >
          <input
            className="button full"
            type="submit"
            value="Login"
          />
        </div>
        <div
          className="row register"
        >
          <p>
            Not registered yet?
          </p>
          <Link
            className="button full"
            to="/default/registration"
          >
            Sign up
          </Link>
        </div>
        <div
          className="row links"
        >
          <Link
            className="link"
            to="/default/password/reset"
          >
            Forgot your password?
          </Link>
        </div>
      </form>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <Route
    path="default/login/:name"
    render={[Function]}
  />
</React.Fragment>
`;
